Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <!-- ===== HEADER ===== -->
   <header class="header">
     <div class="logo-left">
-      <img src="logojmb.jpg" width="60" height="60">
+      <img src="logojmb.png" width="60" height="60">
     </div>
 
     <div class="title-center">
@@ -155,4 +155,5 @@
     startSlides();
   </script>
 </body>
+
 </html>
