--- a/cart.html
+++ b/cart.html
@@ -125,7 +125,7 @@
   <!-- ===== HEADER ===== -->
   <header class="header">
     <div class="logo-left">
-      <img src="images/logojmb.jpg" alt="Logo">
+      <img src="images/logojmb.png" alt="Logo">
     </div>
 
     <div class="title-center">
@@ -200,3 +200,4 @@
 
 </body>
 </html>
+
