Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -101,9 +101,18 @@
   </main>
 
   <!-- ===== FOOTER ===== -->
-  <footer style="text-align:center; padding:20px;">
-    Contact us:<br>
+   <footer style="text-align:center; padding:20px;">
+     <div class="inmfo">
+     Raj textile world<br>
+     6001-6018, 6th floor,<br>
+     opp the world hotal<br>
+     surat
+    </div>
+
+    <div class="contacts-right">
+      Contact us:<br>
     📞 9374833385 / 7201010785
+    </div>
   </footer>
 
   <!-- ===== FLOATING WHATSAPP BUTTON ===== -->
@@ -157,3 +166,4 @@
 </body>
 
 </html>
+
